// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallMessage should match snapshot 1`] = `
<View
  style={
    {
      "color": "rgba(63,67,80,0.6)",
      "flexDirection": "row",
      "fontSize": 15,
      "lineHeight": 20,
      "paddingBottom": 5,
      "paddingTop": 5,
    }
  }
>
  <CompassIcon
    name="phone-in-talk"
    size={16}
    style={
      {
        "backgroundColor": "#339970",
        "borderRadius": 8,
        "color": "white",
        "marginRight": 5,
        "overflow": "hidden",
        "padding": 12,
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#3f4350",
          "fontWeight": "bold",
        }
      }
    >
      User 1 started a call
    </Text>
    <FormattedRelativeTime
      style={
        {
          "color": "#3f4350",
        }
      }
      updateIntervalInSeconds={1}
      value={100}
    />
  </View>
  <TouchableOpacity
    onPress={[Function]}
    style={
      [
        {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#339970",
          "borderRadius": 8,
          "flexDirection": "row",
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <CompassIcon
      name="phone-outline"
      size={16}
      style={
        [
          {
            "color": "white",
            "marginRight": 5,
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "white",
          },
          undefined,
        ]
      }
    >
      Join call
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`CallMessage should match snapshot for ended call 1`] = `
<View
  style={
    {
      "color": "rgba(63,67,80,0.6)",
      "flexDirection": "row",
      "fontSize": 15,
      "lineHeight": 20,
      "paddingBottom": 5,
      "paddingTop": 5,
    }
  }
>
  <CompassIcon
    name="phone-hangup"
    size={16}
    style={
      {
        "backgroundColor": "rgba(63,67,80,0.6)",
        "borderRadius": 8,
        "color": "white",
        "marginRight": 5,
        "overflow": "hidden",
        "padding": 12,
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#3f4350",
          "fontWeight": "bold",
        }
      }
    >
      Call ended
    </Text>
    <View
      style={
        {
          "alignContent": "center",
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          {
            "color": "#3f4350",
          }
        }
      >
        Ended at 
      </Text>
      <FormattedTime
        isMilitaryTime={false}
        timezone="utc"
        value={200}
      />
      <Text
        style={
          {
            "color": "#3f4350",
            "marginLeft": 5,
            "marginRight": 5,
          }
        }
      >
        •
      </Text>
      <Text
        style={
          {
            "color": "#3f4350",
          }
        }
      >
        Lasted a few seconds
      </Text>
    </View>
  </View>
</View>
`;

exports[`CallMessage should match snapshot for the call already in the current channel 1`] = `
<View
  style={
    {
      "color": "rgba(63,67,80,0.6)",
      "flexDirection": "row",
      "fontSize": 15,
      "lineHeight": 20,
      "paddingBottom": 5,
      "paddingTop": 5,
    }
  }
>
  <CompassIcon
    name="phone-in-talk"
    size={16}
    style={
      {
        "backgroundColor": "#339970",
        "borderRadius": 8,
        "color": "white",
        "marginRight": 5,
        "overflow": "hidden",
        "padding": 12,
      }
    }
  />
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "#3f4350",
          "fontWeight": "bold",
        }
      }
    >
      User 1 started a call
    </Text>
    <FormattedRelativeTime
      style={
        {
          "color": "#3f4350",
        }
      }
      updateIntervalInSeconds={1}
      value={100}
    />
  </View>
  <TouchableOpacity
    onPress={[Function]}
    style={
      [
        {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#339970",
          "borderRadius": 8,
          "flexDirection": "row",
          "padding": 12,
        },
        undefined,
      ]
    }
  >
    <CompassIcon
      name="phone-outline"
      size={16}
      style={
        [
          {
            "color": "white",
            "marginRight": 5,
          },
          undefined,
        ]
      }
    />
    <Text
      style={
        [
          {
            "color": "white",
          },
          undefined,
        ]
      }
    >
      Current call
    </Text>
  </TouchableOpacity>
</View>
`;
